优化了俱乐部详情，开始做战绩数据看板